# Impulse

./: .gitignore  CMakeLists.txt  README.md
dependencies/GLFW/lib/: glfw3.lib
res/: Default_Shader.shader  Default_Shader_Circle.shader
src/App/: App.cpp  CMakeLists.txt
src/Components/: CMakeLists.txt  Collider.cpp  Collider.h  Component.h  Components.h  Rigidbody.cpp  Rigidbody.h  Transform.cpp  Transform.h
src/Core/: CMakeLists.txt  Scene.cpp  Scene.h
src/Core/InputManager/: CMakeLists.txt  InputManager.h  InputManger.cpp
src/Core/Scene/: CMakeLists.txt  Scene.cpp  Scene.h
src/Core/Window/: CMakeLists.txt  Window.cpp  Window.h
src/Entities/: CMakeLists.txt  Entity.cpp  Entity.h
src/Systems/PhysicsSystem/: CMakeLists.txt  PhysicsSystem.cpp  PhysicsSystem.h
src/Systems/RendererSystem/: CMakeLists.txt  RendererSystem.cpp  RendererSystem.h
src/Utilities/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.h
src/Utilities/Maths/: Maths.h
